--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,98 +8,98 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <nav>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="maito:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
+        <!-- Ефективні рішення -->        
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
 
+        <!-- Особливості -->
         <section>
             <h2>Особливості</h2>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3>увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3>пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3>планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3>сучасні технології</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
 
+        <!-- Чим ми займаємося -->
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><a href=""><img src="./images/activity1.jpg" alt="program" width="370"></a></li>
-                <li><a href=""><img src="./images/activity2.jpg" alt="optimization" width="370"></a></li>
-                <li><a href=""><img src="./images/activity3.jpg" alt="design" width="370"></a></li>
+                <li><a href="#"><img src="./images/activity1.jpg" alt="програмування" width="370"></a></li>
+                <li><a href="#"><img src="./images/activity2.jpg" alt="oптимізація" width="370"></a></li>
+                <li><a href="#"><img src="./images/activity3.jpg" alt="дизайн" width="370"></a></li>
             </ul>
         </section>
 
+        <!-- команда -->
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./images/team1.jpg" alt="designer" width="270">
-                        <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
-                    </a>
+                    <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/team2.jpg" alt="developer" width="270">
-                        <h3>Ольга Рєпіна</h3>
-                        <p>Frontend Developer</p>
-                    </a>
+                    <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270">
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/team3.jpg" alt="marketing" width="270">
-                        <h3>Микола Тарасов</h3>
-                        <p>Marketing</p>
-                    </a>
+                    <img src="./images/team3.jpg" alt="Микола Тарасов" width="270">
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/team4.jpg" alt="designer" width="270">
-                        <h3>Михайло Єрмаков</h3>
-                        <p>UI Designer</p>
-                    </a>
+                    <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270">
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
+    <!-- footer -->
     <footer>
-        <a href="">WebStudio</a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <address>
             <ul>
-                <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="maito:info@devstudio.com">info@devstudio.com</a></li>
+                <li>
+                    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
+                            rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
