изменил имя папки studio

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><a href="#"><img src="./images/Studio/activity1.jpg" alt="програмування" width="370"></a></li>
-                <li><a href="#"><img src="./images/Studio/activity2.jpg" alt="oптимізація" width="370"></a></li>
-                <li><a href="#"><img src="./images/Studio/activity3.jpg" alt="дизайн" width="370"></a></li>
+                <li><a href="#"><img src="./images/studio/activity1.jpg" alt="програмування" width="370"></a></li>
+                <li><a href="#"><img src="./images/studio/activity2.jpg" alt="oптимізація" width="370"></a></li>
+                <li><a href="#"><img src="./images/studio/activity3.jpg" alt="дизайн" width="370"></a></li>
             </ul>
         </section>
 
@@ -67,22 +67,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/Studio/team1.jpg" alt="Ігор Дем'яненко" width="270">
+                    <img src="./images/studio/team1.jpg" alt="Ігор Дем'яненко" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Studio/team2.jpg" alt="Ольга Рєпіна" width="270">
+                    <img src="./images/studio/team2.jpg" alt="Ольга Рєпіна" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Studio/team3.jpg" alt="Микола Тарасов" width="270">
+                    <img src="./images/studio/team3.jpg" alt="Микола Тарасов" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Studio/team4.jpg" alt="Михайло Єрмаков" width="270">
+                    <img src="./images/studio/team4.jpg" alt="Михайло Єрмаков" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
